fix squad bg overflow issue

--- a/src/pages/squad/squad.scss
+++ b/src/pages/squad/squad.scss
@@ -1,12 +1,15 @@
 page-squad {
   .squadCtrl {
-    background-image: url('../assets/img/soccer-field-background.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
+//    background-image: url('../assets/img/soccer-field-background.jpg');
+//    background-size: contain;
+//    background-repeat: no-repeat;
+//    background-position: center center;
     max-height: 100%;
-    min-height: 100%;
-    height: 100%
+//    min-height: 100%;
+    .squadBg{
+        max-height: 100%;
+        max-width: 100%;
+    }
   }
   .button-row {
     background-color: #2d2e32;
